# Hermes

./: .config  .env.example  .gitignore  README.md  django.dockerfile  docker-compose.yml  ecosystem.config.js  go.mod  go.sum  main.go  manage.py  node.dockerfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js  temp.py  wails.json
api/: __init__.py  serializers.py  tasks.py  urls.py  views.py
api/management/commands/: reloadGrafana.py
app/: __init__.py  actions.py  admin.py  app.py  models.py  signals.py  tasks.py  urls.py  views.py
app/grafana/: tasks.py  view.py
app/templatetags/: app_extras.py
backend/: app.go  config.go  data.go  startup.go  utils.go
backend/template/: writter.go
examples/: export_arduino.ino  export_to_pushgateway.py
frontend/: package-lock.json  package.json  package.json.md5  tailwind.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/components/: Footer.vue  Navbar.vue
frontend/src/views/: HomeView.vue
hermes/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
node/: bitnami.conf  celery.sh  defaults.ini  hermes.conf  prometheus.yml  runner.sh
node/deviceCommunicator/: main.py
node/docker/: celery.dockerfile  celery.sh  django.dockerfile  runner.sh  setup.py
node/docker/deviceCommunicator/: main.py
node/grafana/: apikeys.yaml  dashboards.yaml
node/grafana/dashboards/: dashboards.yaml
node/node_service_discovery/: files.py
node/targets/: proeti.yml
static/: staticfiles.json
static/scripts/: script.js
static/src/: input.css
static/styles/: _channel.scss  _devices.scss  _login.scss  _main.scss  _mixins.scss  _navbar.scss  _reports.scss  _system.scss  _variables.scss  _warnings.scss  style.css  style.css.map  style.scss
templates/: _base.html  base.html  channel.html  devices.html  index.html  overview-channel.html  overview.html  reports-list.html  reports.html  system.html
templates/admin/: settings.html  users.html
templates/channels/: channels_list.html
templates/export/: export_multiple_channels.html  export_view.html  preview_export.html
templates/registration/: login.html
(+4 files in other folders)
