[tool.poetry]
name = "hermes"
version = "0.1"
description = "An IOT interface for Unesp-FEG"
authors = ["Otávio Canuto"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-environ = "^0.10.0"
prometheus-client = "^0.16.0"
prometheus-api-client = "^0.5.3"
openpyxl = "^3.1.2"
celery = "^5.2.7"
sqlalchemy = "^2.0.12"
paho-mqtt = "^1.6.1"
psutil = "^5.9.5"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
psycopg2-binary = "^2.9.6"
watchdog = "^3.0.0"


[tool.poetry.group.node.dependencies]
python = "^3.10"
watchdog = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
